# misc

./: README.md  elf_header_loader.c  linux_fifo_client.py  linux_fifo_server.py  linux_keylogger.c  linux_keylogger.py  linux_netstat.rb
hello-world-kernel-module/: .Module.symvers.cmd  .hello.ko.cmd  .hello.mod.cmd  .hello.mod.o.cmd  .hello.o.cmd  .modules.order.cmd  Makefile  hello.c
linux-pty/: Cargo.toml
linux-pty/src/: fd_misc.rs  pt_operations.rs  pty_master.rs
processhider/: evil_script.rb  processhider.c
rust-iterator/: Cargo.toml
rust-iterator/src/: main.rs
rust-reactor/: Cargo.toml
rust-reactor/src/: main.rs  runtime.rs  task.rs  timer.rs
rust-reference-count/: Cargo.toml
rust-reference-count/src/: main.rs
rust-smartpointer/: Cargo.toml
rust-smartpointer/src/: dereferenceable.rs  droppable.rs
simple-stack-machine/: Cargo.toml
simple-stack-machine/src/: main.rs
