[package]
name = "rust-smartpointer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "dereferenceable"
path = "src/dereferenceable.rs"

[[bin]]
name = "droppable"
path = "src/droppable.rs"